fix menu overlay z-index

--- a/src/project/product-list/styles/hero.pcss
+++ b/src/project/product-list/styles/hero.pcss
@@ -480,7 +480,7 @@
         display: block;
         size: 100%;
         position: absolute;
-        z-index: 100;
+        z-index: 10;
 
         &.color-black{
           background-color: $color__green-light;
